--- a/porder.data.contract/porder.data.contract.csproj
+++ b/porder.data.contract/porder.data.contract.csproj
@@ -47,6 +47,7 @@
     <Compile Include="IItemRepository.cs" />
     <Compile Include="IOrderUow.cs" />
     <Compile Include="IRepository.cs" />
+    <Compile Include="IVendorRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
