--- a/porder.model/porder.model.csproj
+++ b/porder.model/porder.model.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Grouping.cs" />
     <Compile Include="Item.cs" />
+    <Compile Include="ItemPrice.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Vendor.cs" />
   </ItemGroup>
