--- a/porder.test/porder.test.csproj
+++ b/porder.test/porder.test.csproj
@@ -55,6 +55,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="GroupingRepositoryTest.cs" />
+    <Compile Include="ItemRepositoryTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
