--- a/porder.model/porder.model.csproj
+++ b/porder.model/porder.model.csproj
@@ -43,9 +43,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CreateOrderResponse.cs" />
     <Compile Include="Grouping.cs" />
     <Compile Include="Item.cs" />
     <Compile Include="ItemPrice.cs" />
+    <Compile Include="Order.cs" />
+    <Compile Include="Owner.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Vendor.cs" />
   </ItemGroup>
