--- a/porder.data/porder.data.csproj
+++ b/porder.data/porder.data.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.Entity" />
+    <Reference Include="System.Transactions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -48,6 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="OrderRepository.cs" />
     <Compile Include="VendorRepository.cs" />
     <Compile Include="ItemRepository.cs" />
     <Compile Include="GroupingRepository.cs" />
