--- a/porder.service.host/App.config
+++ b/porder.service.host/App.config
@@ -36,7 +36,7 @@
   <appSettings>
     <!-- Service Bus specific app setings for messaging connections -->
     <add key="Microsoft.ServiceBus.ConnectionString" value="Endpoint=sb://[your namespace].servicebus.windows.net;SharedSecretIssuer=owner;SharedSecretValue=[your secret]"/>
-    <add key="ConfigurationUrl" value="http://localhost:81/Customer/Login"/>
+    <add key="ConfigurationUrl" value="http://orders.cloudapp.net/Customer/Login"/>
   </appSettings>
   <connectionStrings>
     <add name="Order" connectionString="Server=.\SQLEXPRESS2005;Database=POS;User ID=sa;Password=123;Trusted_Connection=False;Connection Timeout=30;" providerName="System.Data.SqlClient"/>
