--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -5,4 +5,5 @@
   <repository path="..\porder.service.host\packages.config" />
   <repository path="..\porder.service\packages.config" />
   <repository path="..\porder.test\packages.config" />
+  <repository path="..\porder.window\packages.config" />
 </repositories>
