--- a/porder.window/App.config
+++ b/porder.window/App.config
@@ -36,10 +36,10 @@
   <appSettings>
     <!-- Service Bus specific app setings for messaging connections -->
     <add key="Microsoft.ServiceBus.ConnectionString" value="Endpoint=sb://[your namespace].servicebus.windows.net;SharedSecretIssuer=owner;SharedSecretValue=[your secret]" />
-    <add key="ConfigurationUrl" value="http://orders.cloudapp.net/Customer/Login" />
+    <add key="HostUrl" value="http://orders.cloudapp.net" />
   </appSettings>
   <connectionStrings>
-    <add name="Order" connectionString="Server=.\SQLEXPRESS2005;Database=POS;User ID=sa;Password=123;Trusted_Connection=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
+    <add name="Order" connectionString="Data Source=.\SQLEXPRESS2005;Initial Catalog=POS;User ID=sa;Password=123;Trusted_Connection=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
