click one installer

--- a/porder.window/App.config
+++ b/porder.window/App.config
@@ -36,7 +36,9 @@
   <appSettings>
     <!-- Service Bus specific app setings for messaging connections -->
     <add key="Microsoft.ServiceBus.ConnectionString" value="Endpoint=sb://[your namespace].servicebus.windows.net;SharedSecretIssuer=owner;SharedSecretValue=[your secret]" />
-    <add key="HostUrl" value="http://orders.cloudapp.net" />
+    <add key="HostUrl" value="http://127.0.0.1:81" />
+    <add key="ShowSettingAtStartup" value="true" />
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
   <connectionStrings>
     <add name="Order" connectionString="Data Source=.\SQLEXPRESS2005;Initial Catalog=POS;User ID=sa;Password=123;Trusted_Connection=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
@@ -44,4 +46,16 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
+  <system.web>
+    <membership defaultProvider="ClientAuthenticationMembershipProvider">
+      <providers>
+        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
+      </providers>
+    </membership>
+    <roleManager defaultProvider="ClientRoleProvider" enabled="true">
+      <providers>
+        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
+      </providers>
+    </roleManager>
+  </system.web>
 </configuration>
